--- a/thesis.bib
+++ b/thesis.bib
@@ -15,8 +15,24 @@
   keywords = {Climate change,CROPGRO,Irrigation,Management,Model,Phenology}
 }
 
+@article{adamsEffectsSpatialScale2003,
+  title = {The {{Effects}} of {{Spatial Scale}} of {{Climate Scenarios}} on {{Economic Assessments}}: {{An Example}} from {{U}}.{{S}}. {{Agriculture}}},
+  shorttitle = {The {{Effects}} of {{Spatial Scale}} of {{Climate Scenarios}} on {{Economic Assessments}}},
+  author = {Adams, Richard M. and McCarl, Bruce A. and Mearns, Linda O.},
+  date = {2003-09-01},
+  journaltitle = {Climatic Change},
+  shortjournal = {Climatic Change},
+  volume = {60},
+  number = {1},
+  pages = {131--148},
+  issn = {1573-1480},
+  doi = {10.1023/A:1026014311149},
+  abstract = {The appropriate level of spatial resolution for climate scenarios is a key uncertainty in climate impact studies and regional integrated assessments. To the extent that such uncertainty may affect the magnitude of economic estimates of climate change, it has implications for the public policy debates concerning the efficiency of CO2 control options. In this article, we investigate the effects that different climate scenario resolutions have on economic estimates of the impacts of future climate changeon agriculture in the United States. These results are derived via a set of procedures and an analytical model that has been used previously in climate change assessments. The results demonstrate that the spatial scale of climate scenarios affects the estimates of both regional changes in crop yields and the economic impact on the agricultural sector as a whole. An assessment based on the finer scale climatological information consistently yielded a less favorable assessment of the implications of climate change. Regional indicators of economic activity were of opposite sign in some regions, based on the scenario scale. Such differences in economic magnitudes or signs are potentially important in examining whether past climate change assessments may misstate the economic consequences of such changes. The results reported here suggest that refinement of the spatial scale of scenarios should be carefully considered in future impacts research.},
+  langid = {english}
+}
+
 @article{APSIM,
-  title = {{{APSIM}} \textendash{} {{Evolution}} towards a New Generation of Agricultural Systems Simulation},
+  title = {{{APSIM}} - {{Evolution}} towards a New Generation of Agricultural Systems Simulation},
   author = {Holzworth, Dean P. and Huth, Neil I. and {deVoil}, Peter G. and Zurcher, Eric J. and Herrmann, Neville I. and McLean, Greg and Chenu, Karine and family=Oosterom, given=Erik J., prefix=van, useprefix=true and Snow, Val and Murphy, Chris and Moore, Andrew D. and Brown, Hamish and Whish, Jeremy P. M. and Verrall, Shaun and Fainges, Justin and Bell, Lindsay W. and Peake, Allan S. and Poulton, Perry L. and Hochman, Zvi and Thorburn, Peter J. and Gaydon, Donald S. and Dalgliesh, Neal P. and Rodriguez, Daniel and Cox, Howard and Chapman, Scott and Doherty, Alastair and Teixeira, Edmar and Sharp, Joanna and Cichota, Rogerio and Vogeler, Iris and Li, Frank Y. and Wang, Enli and Hammer, Graeme L. and Robertson, Michael J. and Dimes, John P. and Whitbread, Anthony M. and Hunt, James and family=Rees, given=Harm, prefix=van, useprefix=true and McClelland, Tim and Carberry, Peter S. and Hargreaves, John N. G. and MacLeod, Neil and McDonald, Cam and Harsdorf, Justin and Wedgwood, Sara and Keating, Brian A.},
   date = {2014-12-01},
   journaltitle = {Environmental Modelling \& Software},
@@ -161,6 +177,17 @@
   langid = {english}
 }
 
+@article{howard1994,
+  title = {Evaluation of the {{GOSSYM-COMAX Cotton Growth Simulation Model}}/{{Expert Management System}} in {{Tennessee}}},
+  author = {{University of Tennessee Agricultural Experiment Station} and Howard, Donald and Hoskinson, Philip E. and Smith, Marshall},
+  date = {1994-06},
+  journaltitle = {Bulletins},
+  pages = {22},
+  url = {https://trace.tennessee.edu/utk_agbulletin/433},
+  abstract = {The GOSSYM-COMAX growth simulation model! expert management system for cotton production is a computer model that simulates cotton growth under different conditions. It uses information on soil conditions, weather, fertilizer applications, and early plant growth to estimate needs for extra fertilization and to predict maturity date and yield volume. The model has been evaluated for accuracy in Mississippi and South Carolina, where it was developed. Because Tennessee is on the edge of the Cotton Belt, and has growing conditions different from the states where the model was originally used, researchers expected the model to perform differently here. Researchers found that the model's accuracy varied. Each modification improved its predictions for additional fertilization, but yield predictions were erratic. Tillage system had little or no effect on the model's accuracy. Researchers recommend further location-based changes to help the model accurately predict crop maturity in Tennessee. Researchers returned information to the GOSSYM-COMAX Information Unit, where it was used to make the model easier to use and more accurate. The large amounts of time and information required to run this model make it more useful to researchers, extension agents, and consultants than to the average producer.},
+  langid = {english}
+}
+
 @article{jones2003,
   title = {The {{DSSAT}} Cropping System Model},
   author = {Jones, J. W and Hoogenboom, G and Porter, C. H and Boote, K. J and Batchelor, W. D and Hunt, L. A and Wilkens, P. W and Singh, U and Gijsman, A. J and Ritchie, J. T},
@@ -201,6 +228,19 @@
   urldate = {2021-11-26},
   abstract = {Serveral processes occur simultaneously in the soil under growing row crops. If there processes were isolated and occured independently, the prediciton of their behavior would not be so difficult. But the processes interact--each process affect several others. Included in these processes is root growth, which depends on conditions within the root zone and on activity in the aerial portion of the crop. The spatial and temporal distribution of roots affects the pattern of water and nutrient uptake. Consequent root growth is affected by the resultant stresses, and a feedback loop is clearly visible.},
   venue = {{Proc. Seminar on Agricultural Industrial Complexes. Scientific Research Institute of Planning, Latvian GOSPLAN, Riga.}}
+}
+
+@article{lemmon1986,
+  title = {Comax: {{An Expert System}} for {{Cotton Crop Management}}},
+  shorttitle = {Comax},
+  author = {Lemmon, Hal},
+  date = {1986-07-04},
+  journaltitle = {Science},
+  volume = {233},
+  number = {4759},
+  pages = {29--33},
+  publisher = {{American Association for the Advancement of Science}},
+  doi = {10.1126/science.233.4759.29}
 }
 
 @article{li2009,
