--- a/intro.tex
+++ b/intro.tex
@@ -21,7 +21,7 @@
 另外，一些通用的作物生长模型也被用于模拟棉花生长，如 EPIC\cite{williams1989}，WOFOST\cite{vanDiepen1989WOFOST}，SUCROS\cite{vanittersum2003}，GRAMI\cite{ko2005}，CropSyst\cite{sommer2008}和 AquaCrop\cite{steduto2009}。
 
 \begin{table}
-    \caption{现有棉花生长模拟模型基本信息}
+    \caption{现有棉花生长模拟模型基本信息}\label{tab:overview}
     \small
     \centering
     \begin{tabular}{cp{0.14\linewidth}cccp{0.22\linewidth}}
