--- a/thesis.bib
+++ b/thesis.bib
@@ -86,6 +86,27 @@
   organization = {{Cotton2K Version 4.0 | Plant Sciences and Genetics in Agriculture}}
 }
 
+@article{dewit25YearsWOFOST2019,
+  title = {25 Years of the {{WOFOST}} Cropping Systems Model},
+  author = {family=Wit, given=Allard, prefix=de, useprefix=true and Boogaard, Hendrik and Fumagalli, Davide and Janssen, Sander and Knapen, Rob and family=Kraalingen, given=Daniel, prefix=van, useprefix=true and Supit, Iwan and family=Wijngaart, given=Raymond, prefix=van der, useprefix=true and family=Diepen, given=Kees, prefix=van, useprefix=true},
+  date = {2019},
+  journaltitle = {Agricultural systems},
+  volume = {168},
+  pages = {154--167},
+  issn = {0308521X},
+  doi = {10.1016/j.agsy.2018.06.018},
+  abstract = {The WOFOST cropping systems model has been applied operationally over the last 25 years as part of the MARS crop yield forecasting system. In this paper we provide an updated description of the model and reflect on the lessons learned over the last 25 years. The latter includes issues like system performance, model sensitivity, spatial model setup, parameterization and calibration approaches as well as software implementation and version management. Particularly for spatial model calibrations we provide experience and guidelines on how to execute calibrations and how to evaluate WOFOST model simulation results, particularly under conditions of limited field data availability. As an open source model WOFOST has been a success with at least 10 different implementations of the same concept. An overview is provided for those implementations which are managed by MARS or Wageningen groups. However, the proliferation of WOFOST implementations has also led to questions on the reproducibility of results from different implementations as is demonstrated with an example from MARS. In order to certify that the different WOFOST implementations and versions available can reproduce basic sets of inputs and outputs we make available a large set of test cases as appendix to this publication. Finally, new methodological extensions have been added to WOFOST in simulating the impact of nutrients limitations, extreme events and climate variability. Also, a difference is made in the operational and scientific versions of WOFOST with different licensing models and possible revenue generation. Capitalizing both on academic development as well as model testing in real-world situations will help to enable new applications of the WOFOST model in precision agriculture and smart farming.}
+}
+
+@misc{dewitSystemDescriptionWOFOST2020,
+  title = {System Description of the {{WOFOST}} 7.2 Cropping Systems Model},
+  editor = {family=Wit, given=A.J.W., prefix=de, useprefix=true and Boogaard, H.L. and Supit, I. and family=Berg, given=M., prefix=van den, useprefix=true},
+  date = {2020-05},
+  publisher = {{Wageningen Environmental Research}},
+  url = {https://wofost.readthedocs.io/en/latest/_downloads/3c9337e7ab23207e5a5819689c79a889/WOFOST_system_description.pdf},
+  langid = {english}
+}
+
 @article{fao56,
   title = {Crop Evapotranspiration. {{Guidelines}} for Computing Crop Water Requirements},
   author = {Allen, Richard G. and Pereira, Luis S. and Raes, Dirk and Smith, Martin},
@@ -385,6 +406,21 @@
   keywords = {COTGROW,栽培管理,模拟模型,生长发育}
 }
 
+@article{phogatSeasonalSimulationWater2014,
+  title = {Seasonal Simulation of Water, Salinity and Nitrate Dynamics under Drip Irrigated Mandarin ({{Citrus}} Reticulata) and Assessing Management Options for Drainage and Nitrate Leaching},
+  author = {Phogat, V. and Skewes, M. A. and Cox, J. W. and Sanderson, G. and Alam, J. and \v{S}im\r{u}nek, J.},
+  date = {2014-05-26},
+  journaltitle = {Journal of Hydrology},
+  shortjournal = {Journal of Hydrology},
+  volume = {513},
+  pages = {504--516},
+  issn = {0022-1694},
+  doi = {10.1016/j.jhydrol.2014.04.008},
+  abstract = {Estimation of all water fluxes temporally and spatially within and out of the crop root zone, and evaluation of issues like salinity and nutrient leaching, are necessary to fully appraise the efficiency of irrigation systems. Simulation models can be used to investigate these issues over several seasons when the cost of long term monitoring is prohibitive. Model results can be used to advise growers if improvements are required to various aspects of irrigation system operations. In this study, HYDRUS-2D was used to evaluate data measured during one season in a young mandarin (Citrus reticulata) orchard, irrigated with an intensive surface drip fertigation system. Water contents, salinities, and nitrate concentrations measured weekly in the field were compared with model predictions. The temporal mean absolute error (MAE) values between weekly measured and simulated water contents ranged from 0.01 to 0.04cm3cm-3. However, modelling error (MAE) was slightly larger at 10cm depth (0.04cm3cm-3), as compared to greater depths (0.02\textendash 0.03cm3cm-3). Similarly, the errors were larger in the surface soil layer (25cmdepth) for nitrate\textendash nitrogen, NO3-\textendash N (1.52mmol(c)L-1), as compared to greater depths. The spatial and temporal soil solution salinity (ECsw) and NO3-\textendash N data showed accumulation of salts and nitrate within the soil up until day 150 of the simulation (December, 2006), followed by leaching due to high precipitation and over irrigation at later times. Only 49\% of applied water was used by the mandarin trees, while 33.5\% was leached. On the other hand, the simulation revealed that a significant amount of applied nitrogen (85\%) was taken up by the mandarin trees, and the remaining 15\% was leached. The results indicate that the irrigation and fertigation schedule needs modifying as there was overwatering from December onwards. Different permutations and combinations of irrigation and fertigation scheduling were evaluated to optimise the water and nitrogen uptake and to reduce their leaching out of the crop root zone. Slightly higher nitrogen uptake (1.73kgha-1) was recorded when fertigation was applied second to last hour in an irrigation event, as compared to applying it earlier during an irrigation event. Similarly, a 20\% reduction in irrigation and N application produced a pronounced reduction in drainage (28\%) and N leaching (46.4\%), but it also decreased plant N uptake by 15.8\% and water uptake by 4.8\%, and increased salinity by 25.8\%, as compared to the normal practice. This management would adversely impact the sustainability of this expensive irrigation system. However, reducing only irrigation by 30\% during the 2nd half of the crop season (January to August) reduced drainage and N leaching by 37.2\% and 50.5\%, respectively, and increased N uptake by 6.9\%. Such management of irrigation would be quite promising for the sustainability of the entire system. It is concluded that judicious manipulations of irrigation and fertilizer applications can be helpful in designing drip irrigation schedules for perennial horticultural crops to achieve improved efficiency of irrigation and fertigation applications and reduced contamination of receiving water bodies.},
+  langid = {english},
+  keywords = {Fertigation,HYDRUS,Mandarin,Modelling,Nitrate leaching,Soil salinity}
+}
+
 @article{priestley1972,
   title = {On the {{Assessment}} of {{Surface Heat Flux}} and {{Evaporation Using Large-Scale Parameters}}},
   author = {Priestley, C. H. B. and Taylor, R. J.},
@@ -628,6 +664,23 @@
   author = {{新疆维吾尔自治区统计局} and {国家统计局新疆调查总队}},
   date = {2019},
   publisher = {{中国统计出版社}}
+}
+
+@article{yang2009,
+  title = {An Easily Implemented Agro-Hydrological Procedure with Dynamic Root Simulation for Water Transfer in the Crop\textendash Soil System: {{Validation}} and Application},
+  shorttitle = {An Easily Implemented Agro-Hydrological Procedure with Dynamic Root Simulation for Water Transfer in the Crop\textendash Soil System},
+  author = {Yang, Dejun and Zhang, Tuqiao and Zhang, Kefeng and Greenwood, Duncan J. and Hammond, John P. and White, Philip J.},
+  date = {2009-05-30},
+  journaltitle = {Journal of Hydrology},
+  shortjournal = {Journal of Hydrology},
+  volume = {370},
+  number = {1},
+  pages = {177--190},
+  issn = {0022-1694},
+  doi = {10.1016/j.jhydrol.2009.03.005},
+  abstract = {Models for water transfer in the crop\textendash soil system are key components of agro-hydrological models for irrigation, fertilizer and pesticide practices. Many of the hydrological models for water transfer in the crop\textendash soil system are either too approximate due to oversimplified algorithms or employ complex numerical schemes. In this paper we developed a simple and sufficiently accurate algorithm which can be easily adopted in agro-hydrological models for the simulation of water dynamics. We used a dual crop coefficient approach proposed by the FAO for estimating potential evaporation and transpiration, and a dynamic model for calculating relative root length distribution on a daily basis. In a small time step of 0.001d, we implemented algorithms separately for actual evaporation, root water uptake and soil water content redistribution by decoupling these processes. The Richards equation describing soil water movement was solved using an integration strategy over the soil layers instead of complex numerical schemes. This drastically simplified the procedures of modeling soil water and led to much shorter computer codes. The validity of the proposed model was tested against data from field experiments on two contrasting soils cropped with wheat. Good agreement was achieved between measurement and simulation of soil water content in various depths collected at intervals during crop growth. This indicates that the model is satisfactory in simulating water transfer in the crop\textendash soil system, and therefore can reliably be adopted in agro-hydrological models. Finally we demonstrated how the developed model could be used to study the effect of changes in the environment such as lowering the groundwater table caused by the construction of a motorway on crop transpiration.},
+  langid = {english},
+  keywords = {Agro-hydrological models,Crop–soil system,Integrated Richards Equation (IRE),Plant–soil–atmosphere system,Soil water modeling}
 }
 
 @article{yu2019,
