--- a/method.tex
+++ b/method.tex
@@ -1,1 +1,111 @@
-\chapter{研究方法}
+\chapter{材料与方法}
+
+\section{实验观测}
+\subsection{土壤含水量}
+
+\subsection{棉花生理指标}
+
+所获数据用 Python 进行统计分析，利用 Duncan 新复极差检验进行差异显著检验 $(p = 0.05)$。
+
+\subsection{棉花水分利用效率}
+水分利用效率 (Water use efficiency, WUE) 是节水农业重要指标，高水平的 WUE 是干旱区农业持续发展的关键所在。
+WUE 包括灌溉水利用效率，降水利用效率和作物水分利用效率。
+由于研究区降水稀少，本文仅分析灌溉水利用效率和作物水分利用效率。
+
+棉花水分利用效率 ($WUE_{ET}$) 和灌溉水分利用效率 ($IWUE$) 计算公式如下：
+
+\begin{equation}
+    WUE_{ET} = Y / ET_c
+\end{equation}
+
+\begin{equation}
+    IWUE = (Y - Y_n) / I
+\end{equation}
+
+式中 $Y$ 为皮棉产量 ($\mathrm{kg\ ha^{-1}}$)，
+$Y_n$ 为无灌水条件下棉花皮棉产量 ($\mathrm{kg\ ha^{-1}}$)，
+$ET_c$ 为生育期棉花蒸散量，
+$I$ 为灌水量 (mm)。
+\subsection{棉花蒸散量计算}
+
+各处理耗水量采用水量平衡公式计算：
+
+\begin{equation}
+    ET_c = R + I - F + Q - S + \Delta W
+\end{equation}
+
+式中 $ET_c$ 为作物蒸发蒸腾量 (mm)，
+$R$ 为降水量 (mm)，
+$I$ 为灌水量 (mm)，
+$F$ 为地表径流量 (mm)，考虑到地下埋管滴灌棉田实验期间无地表径流发生，此处取 $F = 0$
+$Q$ 为地下水补给量 (mm)，实验资料表明 110 \~ 130 cm 深处土壤水分变化不明显，因此做简化处理，取 $Q = 0$，
+$\Delta W$ 为土壤储水变化量 (mm)，
+$S$ 为深层渗漏量(mm)，实验田灌水量通过水量平衡方程计算确定，不存在深层渗漏，故 $S=0$；
+$\Delta W$ 为土壤贮水量的减少量(mm)：
+
+\begin{equation}
+    \Delta W = W_i - W_{i+1}
+\end{equation}
+
+式中：$W_i$ 和 $W_{i+1}$ 分别为第 $i$ 个时段初和时段末计划湿润层内的土壤贮水量 (mm)。
+为方便水量平衡计算，将含水率换算为以 mm 为单位的土壤贮水量 $W$ ：
+
+\begin{equation}
+    W = 10 \cdot \theta \cdot \gamma \cdot h
+\end{equation}
+
+式中：$W$ 为土壤贮水量(mm)，$\theta$ 为计划湿润层内土壤质量含水率 (\%)，$\gamma$ 为土壤体积质量 ($\mathrm{g cm^{-3}}$)，$h$ 为计划湿润层深度 (cm)。
+
+\section{模型模拟}
+\subsection{模型改进}
+
+潜在作物蒸腾与土壤蒸发的计算如公式\ref{eq:E_p}和公式\ref{eq:T_p}
+\begin{equation}
+    \label{eq:T_p}
+    T_p = \frac{
+        (1 - W_{frac}) \{ V_c \frac{\Delta_v}{\lambda_w} (R_n - G) + \frac{p_1 \rho_a C_a}{\lambda_w} (\frac{e_{sat} - e_a}{r_{a,can}}) \}
+    }{
+        \Delta_v + \gamma_a(1 + \frac{ r_{s,min} }{ r_{a,can} LAI_{eff} })
+    }
+\end{equation}
+\begin{equation}
+    \label{eq:E_p}
+    E_p = \frac{
+        (1 - V_c) \frac{\Delta_v}{\lambda_w} (R_n - G)
+        + \frac{p_1 \rho_a C_a}{\lambda_w} (\frac{e_{sat} - e_a}{r_{a,can}})
+    }{
+        \Delta_v + \gamma_a (1 + \frac{r_{soil}}{r_{a,soil}})
+    }
+\end{equation}
+
+\subsection{模型参数化}
+本文采用 2019-2020 连续 2 年的棉花实验数据对 Cotton2K 模型进行参数化。
+其中作物生长参数如叶面积指数 (LAI)，株高，干物质积累和主茎节数通过实验得到。
+土壤参数如土壤水分、盐分初始值由实验得到；饱和导水率，Van-Genuchten
+公式参数 $(\alpha, \beta)$ 等参数由率定得到；气象参数取自阿拉尔气象站；
+作物参数和水分胁迫参数由率定得到。
+
+\section{多目标优化}
+\begin{algorithm}
+    \caption{NSGA-III 第 t 代的过程}
+    \KwIn{$H$ 构造的参考点 $Z^s$ 或提供的目标点 $Z^a$, 父代种群 $P_t$}
+    \KwOut{$P_{t+1}$}
+
+    $S_t = \emptyset, i = 1$\\
+    $Q_t$ = 重组+变异($P_t$)\\
+    $R_t = P_t \cup Q_t$\\
+    $(F_1, F_2, \dots)$ = 非支配排序($R_t$)\\
+    \Repeat{$|S_t \ge N|$}{$S_t = S_t \cup F_i$ 且 $i = i + 1$}
+    包含父代的 Pareto 前沿: $F_l = F_i$\\
+    \eIf{$|S_t| = N$}{
+    $P_{t+1} = S_t$, break
+    }{
+    $P_{t+1} = \cup^{l-1}_{j=1} F_j$\\
+    从 $F_l$ 中选点: $K = N - |P_{t+1}|$\\
+    归一化目标并创建参考集 $Z^r$: $\mathtt{Normalize}(\mathrm{f}^n, S_t, Z^r, Z^s, Z^a)$\\
+    Associate each member $\mathbf{s}$ of $S_t$ with a reference point: $[\pi(\mathbf{s}), d(\mathbf{s})] =\mathtt{Associate}(S_t, Z^r)$
+    \tcc{$\pi(\mathbf{s})$: closest reference point, $d$: distance between s and $\pi(\mathbf{s})$}
+    Compute niche count of reference point $j \in Z^r$: $\rho_j = \sum_{\mathbf{s}\in S_t/F_l}((\pi(\mathbf{s})) ? 1 : 0 )$\\
+    Choose $K$ members one at a time from $F_l$ to construct $P_{t+1}$: $\mathtt{Niching}(K, \rho_j, \pi, d, Z^r, F_l, P_{t+1})$
+    }
+\end{algorithm}
