UPDATE: some literature review

--- a/abstract.tex
+++ b/abstract.tex
@@ -10,3 +10,12 @@
 其次，建立有效面积指数在冠层空间分布比例与生理发育时间的分段函数方程，改进光能截获模拟精度，构建基于过程的棉花光合生产与干物质积累模型；
 再次， IRE 方法改进水分运移方程上下边界条件，采用根系吸水与根长密度分布统一求解的方法，分层计算盐分和根系分布对水分运移的影响，建立考虑冠层光能截获、根系和盐分空间分布的水分运移模型；
 最后，量化棉花各器官干物质分配、蕾铃发育与脱落过程，构建棉花干物质分配与产量形成的模拟模型。
+
+Non-mulch planting technology is an effective mean to solve the residual plastic mulch pollution in cotton (\textit{Gossypium hirsutum} L.) fields in southern Xinjiang.
+The impacts of irrigation management on the growth development and yield of non-mulch cotton were quantitatively evaluating by employing a cotton growth simulating system in this research.
+The spatio-temporal distribution of the effective photosynthetic leaf area index in the canopy at different developmental stages varies strongly.
+The Cotton2K model with modification in canopy submodel will be referenced as a basic theoretical model, and calibrated using field experiments data during the two cotton growing seasons of 2019 and 2020.
+Firstly, in order to improve the simulation accuracy of light energy interception, a stratified model for spatial distribution ratio of effective area index in canopy and physiological development time was built.
+Secondly, the process-based cotton photosynthetic production and dry matter accumulation models will be created.
+Finally, the dry matter distribution, the number of branches, squares, bolls, open bolls, fruiting sites and aborted fruits will be calculated, thereby establishing a cotton growth model.
+The decline of normalized root mean squared error (NRMSE) for canopy related metrics shows that modifications significantly ($p < 0.05$) improved the accuracies of simulation.
