--- a/intro.tex
+++ b/intro.tex
@@ -91,3 +91,37 @@
         \bottomrule
     \end{tabular}
 \end{table}
+
+\subsection{棉花生长模型的应用研究}
+
+棉花生长模型最基本的目的是预测产量，近几年，国外已经再水分利用效率评价和灌溉管理\cite{baumhardt2014,booker2014,booker2015,modala2015,thorp2015,anapalli2016,attia2016,linker2016,tsakmakis2018,thorp2019,thorp2020,thorp2020a}、
+氮磷动态和施肥管理\cite{shumway2012,amin2017,arshad2017,zurweller2019}、
+气象变化响应、
+品质模拟、
+打顶和生产管理\cite{yang2008}等方面开展了大量研究。
+为了不同的研究目的，所选择的模型也存在较大的差异。
+国内学者也在产量预测、模型性能评价、水分使用效率评价、品质成分含量模拟、株高生长模拟、水氮耦合效应评价、水盐运移、根系生长模拟和模型敏感性与不确定性分析等方面开展了研究和探索。
+然而，在不同生长发育时期，冠层截获的光能在不同空间的分布比例存在一定的差异性和规律性，定量化描述这个过程有望提高光合作用模拟精度。
+
+值得注意的是， GOSSYM 及其后勤版本如 Cotton2K 是世界上最成功的棉花模型之一。
+Cotton2K 模型基于 GOSSYM 模型的过程公式，借鉴了 SIMCOTI ， SIMCOTII 和 CALGOS 模型的算法，使用每小时的气象数据计算水分和能量平衡，
+提高了干旱和灌溉条件下的棉花生长模拟的精度和适用性。
+虽然模型也考虑了盐分和水分在土壤的分布，然而，使用的 Richards 方程 \cite{richards1931} 计算水分运移过程存在上下边界粗糙的问题，
+而且对于滴灌模式，沿滴灌带垂直方向的根系分布也应被精细的考虑；
+另外，实际蒸腾计算过程中对冠层光截获因子的精细模拟也有改进的空间。
+
+\subsection{发展动态和问题分析}
+从局部到整体，由简单到复杂，由经验性到机理性，由智能化到数字化的发展是棉花生长模型的主要发展趋势。另外，增强目标性和适用性，构建专门针对某一生产实际问题的专用模型更具有应用价值[12]。
+项目从服务南疆地区棉花无膜栽培的几个关键问题出发，课题组认为以下问题急需深入分析和探讨。
+
+\begin{enumerate}
+    \item 播种量是无膜棉种植中的一个重要问题，播种密度影响光能在冠层内的分布，在不同发育阶段光合有效叶面积指数在冠层水平和垂直方向分布比例是动态变化的，对冠层光能截获的精确定量化模拟是关键问题之一。
+    \item 播种日期是影响无膜棉出苗率和产量的关键因素，综合考虑光热效应以及地温对出苗、现蕾、开花和吐絮时间的影响，有望提高物候学发育阶段的模拟精度以确定一个合适的播种日期。
+    \item 灌溉制度高度影响棉花产量，水分需求需要精确的模拟。Cotton2K 虽然提供了每小时的模拟结果，但如能精确考虑冠层光能截获、根系分布和盐分对水分运移影响并反映到模型中，有望提高水分运移的模拟精度。
+    \item 最新的多尺度的 SWAP 模型（version 4.0）\cite{swap2021} 是否可以改进 Cotton 2K 模型的水分运移模拟精度，需要对比研究和验证。
+\end{enumerate}
+
+综上所述，为了服务中棉 619 在南疆地区的无膜栽培推广应用，本文以 Cotton2K 模型为基础，
+重点研究考虑冠层光合作用有效叶面积指数的水平、垂直分布比例的光能截获模拟，以及考虑冠层光能截获、根系和盐分空间分布影响的水分运移模拟，
+建立适合南疆干旱、盐渍化土壤特点的棉花生长模型，
+为无膜棉的播种日期、播种量的确定和灌溉制度提供定量化的分析手段。
