--- a/model.tex
+++ b/model.tex
@@ -2,6 +2,30 @@
 作物-土壤水-盐分是一个复杂的系统。
 土壤中的盐分和水分是影响作物生长和产量相互作用的两个变量，在盐渍化地区农业灌溉管理中很难将作物对水分、盐分的反应割裂开来，因此需借助作物-土壤水-盐系统模型来研究作物与土壤水盐之间复杂的动态过程和相互作用机制。
 \begin{table}
+    \caption{Agroecosystem metrics evaluated for 12 cotton management scenarios within field at Alaer, Xinjiang, China.
+        The 12 metrics are listed in priority order for evaluation of the Cotton2K agroecosystem model using multiobjective optimization techniques.}
+    \centering
+    \begin{tabular}{llll}
+        \toprule
+        Metric & Description                & Unit                   & n   \\
+        \midrule
+        LY     & Lint yield                 & $\mathrm{kg\ ha^{-1}}$ & 24  \\
+        TAGB   & Total above ground biomass & $\mathrm{kg\ ha^{-1}}$ & 240 \\
+        LAI    & Leaf area index            & $\mathrm{m^2\ m^{-2}}$ & 240 \\
+        LI     & Light interception         & \%                     & 240 \\
+        SCY    & Seed cotton yield          & $\mathrm{m^2\ m^{-2}}$ & 24  \\
+        PH     & Plant height               & cm                     & 240 \\
+        MSN    & Main stem nodes            & nodes                  & 240 \\
+        LDM    & Leaf dry matter            & $\mathrm{m^2\ m^{-2}}$ & 240 \\
+        PDM    & Petiole dry matter         & $\mathrm{m^2\ m^{-2}}$ & 240 \\
+        SDM    & Stem dry matter            & $\mathrm{m^2\ m^{-2}}$ & 240 \\
+        BLN    & Boll number                & bolls                  & 240 \\
+        BDM    & Boll dry matter            & $\mathrm{m^2\ m^{-2}}$ & 240 \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}
     \caption{实测值与模拟值对比统计参数计算公式及描述}
     \begin{tabular}{p{0.15\linewidth}p{0.7\linewidth}p{0.15\linewidth}}
         \toprule
