--- a/thesis.tex
+++ b/thesis.tex
@@ -44,5 +44,6 @@ decision/.style = {base, diamond, aspect=2},
 \input{intro}
 \input{method}
 \input{model}
+\input{result}
 \printbibliography
 \end{document}
